--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <title>Vite App</title>
   </head>
   <body>
+    <section class="feedback">
+      <div class="content">
+        123
+      </div>
+    </section>
+
+    <section class="about"></section>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
