Реализовала правую часть контента

--- a/index.html
+++ b/index.html
@@ -9,7 +9,41 @@
   <body>
     <section class="feedback">
       <div class="content">
-        123
+        <div class="feedback_wrapper">
+          <form class="form"></form>
+          <div class="wrapper_content">
+            <h1 class="title">Наши преимущетсва</h1>
+            <div class="wrapper_description">
+              <div class="description_item">
+                <div class="wrapper_icon">
+                  <img src="./public/images/markIcon.svg" alt="" class="icon" />
+                </div>
+                <p class="description">Более 10 лет опыта</p>
+              </div>
+
+              <div class="description_item">
+                <div class="wrapper_icon">
+                  <img src="./public/images/crownIcon.svg" alt="" class="icon" />
+                </div>
+                <p class="description">Индивидуальный план работы с каждым клиентом</p>
+              </div>
+
+              <div class="description_item">
+                <div class="wrapper_icon">
+                  <img src="./public/images/callIcon.svg" alt="" class="icon" />
+                </div>
+                <p class="description">Стабильная коммуникация и ведение отчётности</p>
+              </div>
+
+              <div class="description_item">
+                <div class="wrapper_icon">
+                  <img src="./public/images/peoplesIcon.svg" alt="" class="icon" />
+                </div>
+                <p class="description">Команда специалистов готовых погрузиться в ваш бизнес и вывести его на новый уровень</p>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
 
