--- a/index.html
+++ b/index.html
@@ -10,7 +10,29 @@
     <section class="feedback">
       <div class="content">
         <div class="feedback_wrapper">
-          <form class="form"></form>
+          <form class="form">
+           
+            <img src="./public/images/bgFeedback.png" alt="" class="bgFeedback">
+
+            <h1 class="title">Оставляй заявку</h1>
+            <h3 class="pre_title">и подключайся прямо сейчас</h3>
+            <div class="wrapper_inputs">
+              <input type="text" class="input-ui" placeholder="Как к вам обращаться?" />
+
+            <input type="text" class="input-ui" placeholder="(999) 999-99-99" />
+            </div>
+            <label class="approval">
+              <input type="checkbox">
+              <span class="approval_description">Я согласен(на) на обработку моих персональных данных и с политикой обработки персональных данных</span>
+            </label>
+            <div class="group_buttons">
+              <button class="send">Отправить</button>
+              <a href="" class="send_telegram">
+                  <img src="./public/images/tgIcon.svg" alt="">
+                  <span>Связаться в телеграм</span>
+              </a>
+            </div>
+          </form>
           <div class="wrapper_content">
             <h1 class="title">Наши преимущетсва</h1>
             <div class="wrapper_description">
@@ -23,23 +45,38 @@
 
               <div class="description_item">
                 <div class="wrapper_icon">
-                  <img src="./public/images/crownIcon.svg" alt="" class="icon" />
+                  <img
+                    src="./public/images/crownIcon.svg"
+                    alt=""
+                    class="icon"
+                  />
                 </div>
-                <p class="description">Индивидуальный план работы с каждым клиентом</p>
+                <p class="description">
+                  Индивидуальный план работы с каждым клиентом
+                </p>
               </div>
 
               <div class="description_item">
                 <div class="wrapper_icon">
                   <img src="./public/images/callIcon.svg" alt="" class="icon" />
                 </div>
-                <p class="description">Стабильная коммуникация и ведение отчётности</p>
+                <p class="description">
+                  Стабильная коммуникация и ведение отчётности
+                </p>
               </div>
 
               <div class="description_item">
                 <div class="wrapper_icon">
-                  <img src="./public/images/peoplesIcon.svg" alt="" class="icon" />
+                  <img
+                    src="./public/images/peoplesIcon.svg"
+                    alt=""
+                    class="icon"
+                  />
                 </div>
-                <p class="description">Команда специалистов готовых погрузиться в ваш бизнес и вывести его на новый уровень</p>
+                <p class="description">
+                  Команда специалистов готовых погрузиться в ваш бизнес и
+                  вывести его на новый уровень
+                </p>
               </div>
             </div>
           </div>
