Реализовала выпадающий список со странами

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="wrapper_inputs">
               <input type="text" class="input-ui" placeholder="Как к вам обращаться?" />
 
-            <input type="text" class="input-ui" placeholder="(999) 999-99-99" />
+            <input type="text" class="input-ui tel-input" placeholder="(999) 999-99-99" />
             </div>
             <label class="approval">
               <input type="checkbox">
