реализовала кастомный чекбокс

--- a/index.html
+++ b/index.html
@@ -22,7 +22,11 @@
             <input type="text" class="input-ui tel-input" placeholder="(999) 999-99-99" />
             </div>
             <label class="approval">
-              <input type="checkbox">
+              <label class="checkbox-ui">
+                <input type="checkbox">
+                <span></span>
+                <img src="./public/images/markIcon2.svg" alt="">
+            </label>
               <span class="approval_description">Я согласен(на) на обработку моих персональных данных и с политикой обработки персональных данных</span>
             </label>
             <div class="group_buttons">
@@ -32,6 +36,7 @@
                   <span>Связаться в телеграм</span>
               </a>
             </div>
+        
           </form>
           <div class="wrapper_content">
             <h1 class="title">Наши преимущетсва</h1>
