Реализовала мобильную верстку

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </label>
             <div class="group_buttons">
               <button class="send">Отправить</button>
-              <a href="" class="send_telegram">
+              <a href="https://t.me/AlenaPutilovaa" class="send_telegram" target="_blank">
                   <img src="./public/images/tgIcon.svg" alt="">
                   <span>Связаться в телеграм</span>
               </a>
