фикс путей картинки

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <main class="content">
         <div class="feedback_wrapper">
           <form class="form">
-            <img src="./public/images/bgFeedback.png" alt="" class="bgFeedback" />
+            <img src="/images/bgFeedback.png" alt="" class="bgFeedback" />
 
             <header>
               <h1 class="title">Оставляй заявку</h1>
@@ -27,7 +27,7 @@
               <span class="checkbox-ui">
                 <input type="checkbox" />
                 <span></span>
-                <img src="./public/images/markIcon2.svg" alt="" />
+                <img src="/images/markIcon2.svg" alt="" />
               </span>
               <span class="approval_description">
                 Я согласен(на) на обработку моих персональных данных и с политикой обработки персональных данных
@@ -37,7 +37,7 @@
             <div class="group_buttons">
               <button class="send">Отправить</button>
               <a href="https://t.me/AlenaPutilovaa" class="send_telegram" target="_blank">
-                <img src="./public/images/tgIcon.svg" alt="" />
+                <img src="/images/tgIcon.svg" alt="" />
                 <span>Связаться в телеграм</span>
               </a>
             </div>
@@ -49,28 +49,28 @@
             <ul class="wrapper_description">
               <li class="description_item">
                 <span class="wrapper_icon">
-                  <img src="./public/images/markIcon.svg" alt="" class="icon" />
+                  <img src="/images/markIcon.svg" alt="" class="icon" />
                 </span>
                 <p class="description">Более 10 лет опыта</p>
               </li>
 
               <li class="description_item">
                 <span class="wrapper_icon">
-                  <img src="./public/images/crownIcon.svg" alt="" class="icon" />
+                  <img src="/images/crownIcon.svg" alt="" class="icon" />
                 </span>
                 <p class="description">Индивидуальный план работы с каждым клиентом</p>
               </li>
 
               <li class="description_item">
                 <span class="wrapper_icon">
-                  <img src="./public/images/callIcon.svg" alt="" class="icon" />
+                  <img src="/images/callIcon.svg" alt="" class="icon" />
                 </span>
                 <p class="description">Стабильная коммуникация и ведение отчётности</p>
               </li>
 
               <li class="description_item">
                 <span class="wrapper_icon">
-                  <img src="./public/images/peoplesIcon.svg" alt="" class="icon" />
+                  <img src="/images/peoplesIcon.svg" alt="" class="icon" />
                 </span>
                 <p class="description">
                   Команда специалистов готовых погрузиться в ваш бизнес и вывести его на новый уровень
